chore(tests): Use dedicated assertion methods