@@ -19,6 +19,7 @@ package org.operaton.bpm.engine.cdi.test.impl.context;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.jboss.arquillian.junit.Arquillian;
 import org.junit.Test;
@@ -38,17 +39,15 @@ public class MultiInstanceTest extends CdiProcessEngineTestCase {
   @Test
   @Deployment
   public void testParallelMultiInstanceServiceTasks() {
-
     BusinessProcess businessProcess = getBeanInstance(BusinessProcess.class);
-    businessProcess.setVariable("list", Arrays.asList("1","2"));
+    businessProcess.setVariable("list", List.of("1", "2"));
     var process = (ProcessInstanceWithVariablesImpl) businessProcess.startProcessByKey("miParallelScriptTask");
     
     assertThat(process.isEnded()).isFalse();
     assertThat(process.isSuspended()).isFalse();
     assertThat(process.getExecutionEntity().isActive()).isTrue();
-    assertThat(process.getVariables().get("list")).isEqualTo(Arrays.asList("1", "2"));
+    assertThat(process.getVariables()).containsEntry("list", List.of("1", "2"));
     assertThat(process.getExecutionEntity().getCurrentActivityId()).isEqualTo("waitState");
-
   }
 
 }
